sdk-docs_versioned_docs/version-29.0.x/api/entities/Asset/types/interfaces/HistoricAssetTransaction.mdx
---
sidebar_label: "HistoricAssetTransaction"
---

# Interface: HistoricAssetTransaction

Defined in: [src/api/entities/Asset/types.ts:189](https://github.com/PolymeshAssociation/polymesh-sdk/blob/bee6a2fe7a8ce5db42a6982e793782182cde2153/src/api/entities/Asset/types.ts#L189)

## Extends

- [`BaseHistoricAssetTransaction`](BaseHistoricAssetTransaction.mdx)

## Properties

### amount

> **amount**: `BigNumber`

Defined in: [src/api/entities/Asset/types.ts:195](https://github.com/PolymeshAssociation/polymesh-sdk/blob/bee6a2fe7a8ce5db42a6982e793782182cde2153/src/api/entities/Asset/types.ts#L195)

Amount of the fungible tokens involved in the transaction

***

### asset

> **asset**: [`FungibleAsset`](../../Fungible/classes/FungibleAsset.mdx)

Defined in: [src/api/entities/Asset/types.ts:190](https://github.com/PolymeshAssociation/polymesh-sdk/blob/bee6a2fe7a8ce5db42a6982e793782182cde2153/src/api/entities/Asset/types.ts#L190)

***

### blockDate

> **blockDate**: `Date`

Defined in: [src/api/client/types.ts:179](https://github.com/PolymeshAssociation/polymesh-sdk/blob/bee6a2fe7a8ce5db42a6982e793782182cde2153/src/api/client/types.ts#L179)

#### Inherited from

[`BaseHistoricAssetTransaction`](BaseHistoricAssetTransaction.mdx).[`blockDate`](BaseHistoricAssetTransaction.mdx#blockdate)

***

### blockHash

> **blockHash**: `string`

Defined in: [src/api/client/types.ts:178](https://github.com/PolymeshAssociation/polymesh-sdk/blob/bee6a2fe7a8ce5db42a6982e793782182cde2153/src/api/client/types.ts#L178)

#### Inherited from

[`BaseHistoricAssetTransaction`](BaseHistoricAssetTransaction.mdx).[`blockHash`](BaseHistoricAssetTransaction.mdx#blockhash)

***

### blockNumber

> **blockNumber**: `BigNumber`

Defined in: [src/api/client/types.ts:177](https://github.com/PolymeshAssociation/polymesh-sdk/blob/bee6a2fe7a8ce5db42a6982e793782182cde2153/src/api/client/types.ts#L177)

#### Inherited from

[`BaseHistoricAssetTransaction`](BaseHistoricAssetTransaction.mdx).[`blockNumber`](BaseHistoricAssetTransaction.mdx#blocknumber)

***

### event

> **event**: [`EventIdEnum`](../../../../../types/enumerations/EventIdEnum.mdx)

Defined in: [src/api/entities/Asset/types.ts:168](https://github.com/PolymeshAssociation/polymesh-sdk/blob/bee6a2fe7a8ce5db42a6982e793782182cde2153/src/api/entities/Asset/types.ts#L168)

Event identifying the type of transaction

#### Inherited from

[`BaseHistoricAssetTransaction`](BaseHistoricAssetTransaction.mdx).[`event`](BaseHistoricAssetTransaction.mdx#event)

***

### eventIndex

> **eventIndex**: `BigNumber`

Defined in: [src/api/client/types.ts:180](https://github.com/PolymeshAssociation/polymesh-sdk/blob/bee6a2fe7a8ce5db42a6982e793782182cde2153/src/api/client/types.ts#L180)

#### Inherited from

[`BaseHistoricAssetTransaction`](BaseHistoricAssetTransaction.mdx).[`eventIndex`](BaseHistoricAssetTransaction.mdx#eventindex)

***

### extrinsicIndex

> **extrinsicIndex**: `BigNumber`

Defined in: [src/api/entities/Asset/types.ts:173](https://github.com/PolymeshAssociation/polymesh-sdk/blob/bee6a2fe7a8ce5db42a6982e793782182cde2153/src/api/entities/Asset/types.ts#L173)

Index value of the extrinsic which led to the Asset transaction within the `blockNumber` block

#### Inherited from

[`BaseHistoricAssetTransaction`](BaseHistoricAssetTransaction.mdx).[`extrinsicIndex`](BaseHistoricAssetTransaction.mdx#extrinsicindex)

***

### from

> **from**: `null` \| [`DefaultPortfolio`](../../../DefaultPortfolio/classes/DefaultPortfolio.mdx) \| [`NumberedPortfolio`](../../../NumberedPortfolio/classes/NumberedPortfolio.mdx)

Defined in: [src/api/entities/Asset/types.ts:159](https://github.com/PolymeshAssociation/polymesh-sdk/blob/bee6a2fe7a8ce5db42a6982e793782182cde2153/src/api/entities/Asset/types.ts#L159)

Origin portfolio involved in the transaction. This value will be null when the `event` value is `Issued`

#### Inherited from

[`BaseHistoricAssetTransaction`](BaseHistoricAssetTransaction.mdx).[`from`](BaseHistoricAssetTransaction.mdx#from)

***

### fundingRound

> **fundingRound**: `undefined` \| `string`

Defined in: [src/api/entities/Asset/types.ts:178](https://github.com/PolymeshAssociation/polymesh-sdk/blob/bee6a2fe7a8ce5db42a6982e793782182cde2153/src/api/entities/Asset/types.ts#L178)

Name of the funding round (if provided while issuing the Asset). This value is present only when the value of `event` is `Issued`

#### Inherited from

[`BaseHistoricAssetTransaction`](BaseHistoricAssetTransaction.mdx).[`fundingRound`](BaseHistoricAssetTransaction.mdx#fundinground)

***

### instructionId?

> `optional` **instructionId**: `BigNumber`

Defined in: [src/api/entities/Asset/types.ts:182](https://github.com/PolymeshAssociation/polymesh-sdk/blob/bee6a2fe7a8ce5db42a6982e793782182cde2153/src/api/entities/Asset/types.ts#L182)

ID of the instruction being executed. This value is present only when the value of `event` is `Transfer`

#### Inherited from

[`BaseHistoricAssetTransaction`](BaseHistoricAssetTransaction.mdx).[`instructionId`](BaseHistoricAssetTransaction.mdx#instructionid)

***

### instructionMemo?

> `optional` **instructionMemo**: `string`

Defined in: [src/api/entities/Asset/types.ts:186](https://github.com/PolymeshAssociation/polymesh-sdk/blob/bee6a2fe7a8ce5db42a6982e793782182cde2153/src/api/entities/Asset/types.ts#L186)

Memo provided against the executed instruction. This value is present only when the value of `event` is `Transfer`

#### Inherited from

[`BaseHistoricAssetTransaction`](BaseHistoricAssetTransaction.mdx).[`instructionMemo`](BaseHistoricAssetTransaction.mdx#instructionmemo)

***

### to

> **to**: `null` \| [`DefaultPortfolio`](../../../DefaultPortfolio/classes/DefaultPortfolio.mdx) \| [`NumberedPortfolio`](../../../NumberedPortfolio/classes/NumberedPortfolio.mdx)

Defined in: [src/api/entities/Asset/types.ts:163](https://github.com/PolymeshAssociation/polymesh-sdk/blob/bee6a2fe7a8ce5db42a6982e793782182cde2153/src/api/entities/Asset/types.ts#L163)

Destination portfolio involved in the transaction . This value will be null when the `event` value is `Redeemed`

#### Inherited from

[`BaseHistoricAssetTransaction`](BaseHistoricAssetTransaction.mdx).[`to`](BaseHistoricAssetTransaction.mdx#to)
